# pos-streaming-analytics

./: .gitignore  README.md  pyproject.toml
dlt/bronze/: 01_batch_kafka_to_bronze.py  01_streaming_kafka_to_bronze.py
dlt/gold/: 03_batch_silver_to_gold.sql
dlt/silver/: 02_batch_bronze_to_silver.py  02_streaming_bronze_to_silver.py
dlt/utils/: ingestion_helper.py
ingestion/: main.py
ingestion/config/: conf.properties  logging.properties
ingestion/schemas/: instore_inventory_snapshots_key.avsc  instore_inventory_snapshots_value.avsc  instore_inventory_transactions_key.avsc  instore_inventory_transactions_value.avsc  inventory_change_type_key.avsc  inventory_change_type_value.avsc  inventory_snapshots_key.avsc  inventory_snapshots_value.avsc  inventory_transactions_key.avsc  inventory_transactions_value.avsc  items_key.avsc  items_value.avsc  online_inventory_snapshots_key.avsc  online_inventory_snapshots_value.avsc  online_inventory_transactions_key.avsc  online_inventory_transactions_value.avsc  stores_key.avsc  stores_value.avsc
ingestion/utils/: csv_strategy.py  kafka_helper.py  logger_setup.py  source_strategy.py
lakehouse/bronze/: 01_batch_kafka_to_bronze.py  01_streaming_kafka_to_bronze.py
lakehouse/gold/: 03_batch_silver_to_gold.sql  03_streaming_silver_to_gold.sql
lakehouse/silver/: 02_batch_bronze_to_silver.py  02_streaming_bronze_to_silver.py
