[tool.poetry]
name = "pos-streaming-analytics"
version = "0.1.0"
description = "Real-time POS data analytics using Kafka and Lakehouse"
authors = ["Ronie Arauco <ronie.arauco@pucp.edu.pe>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.2.0"
requests = "^2.31.0"

[tool.poetry.group.databricks]
optional = true

[tool.poetry.group.databricks.dependencies]
black = "^23.9.1"
tokenize-rt = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
